post & delete za osoba-udzbenik
