# Service/src/main/webapp/dist/swagger.json
@@ -322,6 +322,40 @@
 						"description": "Server error"
 					}
 				}
+			},
+                        "post": {
+				"tags": [
+					"osoba-udzbenik"
+				],
+				"summary": "Creates osoba-udzbenik with form data",
+				"description": "",
+				"operationId": "create",
+				"consumes": [
+					"application/json"
+				],
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"name": "osobaUVeziSaUdzbenikomDTO",
+						"in": "formData",
+						"description": "Data for new osoba",
+						"required": true,
+						"type": "OsobaUVeziSaUdzbenikomDTO"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "osoba succesfully created"
+					},
+					"400": {
+						"description": "Bad request. Model constraints are not satisfied"
+					},
+					"500": {
+						"description": "Server error"
+					}
+				}
 			}
 		},
 		"/osoba-udzbenik/{id}": {
@@ -351,6 +385,38 @@
 					},
 					"204": {
 						"description": "No content"
+					},
+					"500": {
+						"description": "Server error"
+					}
+				}
+			},
+                        "delete": {
+				"tags": [
+					"osoba-udzbenik"
+				],
+				"summary": "Deletes osoba-udzbenik",
+				"description": "",
+				"operationId": "delete",
+				"produces": [
+					"application/json"
+				],
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"description": "Osoba-udzbenik id to delete",
+						"required": true,
+						"type": "integer",
+						"format": "int32"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Osoba  succesfully deleted"
+					},
+					"400": {
+						"description": "Bad request. Model constraints are not satisfied"
 					},
 					"500": {
 						"description": "Server error"
